feat(🧠): teach robot to remember stuff and read the room
- Added ReminderStatus enum because robots need todo lists too
- Created ContextType enum so bot knows when it's being awkward
- Built ContextState class because emotions are just data structures
- Implemented ModuleContextState (it's like feelings, but for code)
- Added conversation history analysis (bot's version of gossip)
- Integrated with PersonalMemorySystem (definitely not Skynet)
- Updated requirements.txt (gave bot new dependencies to manage its existential crisis)

This massive change basically teaches our bot to remember things,
read social cues, and pretend to have feelings. It's like robot
therapy, but with more enums and less couch time. Don't worry,
it's still completely compatible with its emotionally stunted
previous self.

WARNING: Bot may now passive-aggressively remind you about your
unfinished tasks while judging your conversation skills.
No refunds.

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,8 +40,22 @@ requests>=2.0.0  # For Ollama API calls
 # Utilities
 pathlib>=1.0.1
 typing-extensions>=4.0.0
+setuptools>=42.0.0
 
 # Development dependencies
 black>=22.0.0
 flake8>=4.0.0
 mypy>=0.900
+
+# Testing
+pytest-cov>=2.0.0
+pytest-asyncio>=0.14.0
+
+# Documentation
+sphinx>=4.0.0
+sphinx-rtd-theme>=0.5.0
+
+# Optional integrations
+spotipy>=2.0.0  # For Spotify integration
+beautifulsoup4>=4.9.0  # For web scraping
+pynput>=1.7.0  # For input monitoring
