--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,8 @@ setuptools>=42.0.0
 black>=22.0.0
 flake8>=4.0.0
 mypy>=0.900
+types-psutil>=5.8.0
+types-Pillow>=9.0.0
 
 # Testing
 pytest-cov>=2.0.0
@@ -59,3 +61,7 @@ sphinx-rtd-theme>=0.5.0
 spotipy>=2.0.0  # For Spotify integration
 beautifulsoup4>=4.9.0  # For web scraping
 pynput>=1.7.0  # For input monitoring
+
+# Email handling
+imaplib3>=2.0.0  # For better email handling
+aiosmtplib>=1.0.0  # For async email support
